updated website with media queries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/css/index.css" type="text/css">
+    <link rel="stylesheet" href="static/css/index-1000.css" type="text/css" media="all and (max-width: 1000px)">
+    <link rel="stylesheet" href="static/css/index-700.css" type="text/css" media="all and (max-width: 700px)">
     <title>About | Alione</title>
 </head>
 
