--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                     <details>
                         <summary><img src="static/images/calculator.svg" alt="" height="20px" width="20px">
                             <h4>Calculator</h4>
-                            <div class="down-arrow"></div>
                         </summary>
                         <div class="details-answer">
                             <ul>
@@ -46,7 +45,6 @@
                     <details>
                         <summary><img src="static/images/planner.svg" alt="" height="20px" width="20px">
                             <h4>Planner</h4>
-                            <div class="down-arrow"></div>
                         </summary>
                         <div class="details-answer">
                             <ul>
@@ -59,7 +57,6 @@
                     <details>
                         <summary><img src="static/images/todo.svg" alt="" height="20px" width="20px">
                             <h4>Todo List</h4>
-                            <div class="down-arrow"></div>
                         </summary>
                         <div class="details-answer">
                             <ul>
@@ -71,7 +68,6 @@
                     <details>
                         <summary><img src="static/images/mind.svg" alt="" height="20px" width="20px">
                             <h4>Mind Game</h4>
-                            <div class="down-arrow"></div>
                         </summary>
                         <div class="details-answer">
                             <ul>
@@ -84,7 +80,6 @@
                     <details>
                         <summary><img src="static/images/tables.svg" alt="" height="20px" width="20px">
                             <h4>Tables Game</h4>
-                            <div class="down-arrow"></div>
                         </summary>
                         <div class="details-answer">
                             <ul>
@@ -98,7 +93,6 @@
                     <details>
                         <summary><img src="static/images/typing.svg" alt="" height="20px" width="20px">
                             <h4>Typing Game</h4>
-                            <div class="down-arrow"></div>
                         </summary>
                         <div class="details-answer">
                             <ul>
@@ -239,7 +233,7 @@
                 <section class="question-column">
                     <details id="q1">
                         <summary>
-                            <div class="arrow"></div>What is the point of the games?
+                            What is the point of the games?
                         </summary>
                         <div class="details-answer">
                             <p>Each game contains a purpose to cultivate a skill while maintaining a fun environment. As
@@ -250,7 +244,7 @@
                     </details>
                     <details id="q2">
                         <summary>
-                            <div class="arrow"></div>I have an idea for an application to put on this website; how may I
+                            I have an idea for an application to put on this website; how may I
                             contribute?
                         </summary>
                         <div class="details-answer">
@@ -267,7 +261,7 @@
                 <section class="question-column">
                     <details id="q3">
                         <summary>
-                            <div class="arrow"></div>Is there a way to create an account?
+                            Is there a way to create an account?
                         </summary>
                         <div class="details-answer">
                             <p>Unfortunately, we do not provide the option to create an account; as one of our
@@ -277,7 +271,7 @@
                     </details>
                     <details id="q4">
                         <summary>
-                            <div class="arrow"></div>Why is my history cleared after closing all tabs relating to this
+                            Why is my history cleared after closing all tabs relating to this
                             website?
                         </summary>
                         <div class="details-answer">
